fixed: in Favorites.module styles text-align for mobile devices

--- a/src/components/Favorites/Favorites.module.scss
+++ b/src/components/Favorites/Favorites.module.scss
@@ -41,7 +41,8 @@
 }
 
 .text {
-  font-size: clamp(0.875rem, 0.6581rem + 1.0843vw, 2rem);
+  font-size: clamp(1rem, 0.8072rem + 1.0843vw, 2rem);
+  text-align: center;
 
   & p+p {
     padding-top: 1rem;
